# nyc-geo-toolkit

./: .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .prettierignore  AGENTS.md  CITATION.cff  CLAUDE.md  Makefile  README.md  SECURITY.md  mkdocs.yml  noxfile.py  pyproject.toml
.claude/: launch.json  settings.json
.claude/agents/: example-reviewer.md  release-auditor.md
.claude/commands/: add-example.md  bump.md  release-check.md
.claude/skills/: downstream-compat.md  release-bump.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: cd.yml  ci.yml
docs/: api.md  architecture.md  changelog.md  contributing.md  examples.md  getting-started.md  index.md  releasing.md
examples/: README.md
examples/about-the-data/: .gitignore  README.md  main.py  pyproject.toml
examples/about-the-data-through-time/: main.py  pyproject.toml
examples/boundary-explorer-tearsheet/: .gitignore  README.md  main.py  pyproject.toml
examples/boundary-quickstart/: README.md  main.py  pyproject.toml
examples/boundary-quickstart/reports/: boundary-quickstart-tearsheet.md
examples/example-template/: README.md  main.py  pyproject.toml
examples/normalization-demo/: .gitignore  README.md  main.py  pyproject.toml
examples/normalization-demo/reports/: normalization-demo-tearsheet.md
scripts/: audit_public_api.py  download_historical_from_github.py  generate_placeholder_historical.py  prepare_historical_boundaries.py  smoke_installed_package.py
src/nyc_geo_toolkit/: __init__.py  _basemap.py  _catalog.py  _constants.py  _conversions.py  _geodesy.py  _geojson.py  _loaders.py  _models.py  _normalize.py  _ops.py  _resources.py
src/nyc_geo_toolkit/data/boundaries/historical/: census_tract_2000.geojson  census_tract_2010.geojson  council_district_2013.geojson  neighborhood_tabulation_area_2010.geojson  zcta_2010.geojson
tests/: test_basemap.py  test_boundaries.py  test_consumer_contract.py  test_geodesy.py  test_optional.py  test_package.py  test_vintage.py
