[project]
name = "nyc-geo-toolkit-about-the-data"
version = "0.0.0"
description = "Kitchen-sink visualization showcase for nyc-geo-toolkit."
requires-python = ">=3.10"
dependencies = ["nyc-geo-toolkit[all]", "matplotlib>=3.9"]

[tool.uv.sources]
nyc-geo-toolkit = { path = "../..", editable = true }
